--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -237,7 +237,7 @@
                         </div>
                         <div class="car-price">
                             <span class="price">R$ 890.000</span>
-                            <a href="#" class="btn btn-sm">Ver Detalhes</a>
+                            <a href="/Carros/detalhesMercedes-Benz.html" class="btn btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
@@ -261,12 +261,12 @@
                         </div>
                         <div class="car-features">
                             <span><i class="fas fa-cog"></i> Automático</span>
-                            <span><i class="fas fa-car"></i> 5 portas</span>
+                            <span><i class="fas fa-car"></i> 4 portas</span>
                             <span><i class="fas fa-palette"></i> Azul</span>
                         </div>
                         <div class="car-price">
                             <span class="price">R$ 420.000</span>
-                            <a href="#" class="btn btn-sm">Ver Detalhes</a>
+                            <a href="/Carros/deatalhesBMW X3.html" class="btn btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
@@ -289,12 +289,12 @@
                         </div>
                         <div class="car-features">
                             <span><i class="fas fa-cog"></i> Automático</span>
-                            <span><i class="fas fa-car"></i> 5 portas</span>
+                            <span><i class="fas fa-car"></i> 4 portas</span>
                             <span><i class="fas fa-palette"></i> Branco</span>
                         </div>
                         <div class="car-price">
                             <span class="price">R$ 280.000</span>
-                            <a href="#" class="btn btn-sm">Ver Detalhes</a>
+                            <a href="/Carros/detalhesGolfGTI.html" class="btn btn-sm">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
@@ -318,7 +318,7 @@
                         </div>
                         <div class="car-features">
                             <span><i class="fas fa-cog"></i> Automático</span>
-                            <span><i class="fas fa-car"></i> 5 portas</span>
+                            <span><i class="fas fa-car"></i> 4 portas</span>
                             <span><i class="fas fa-palette"></i> Prata</span>
                         </div>
                         <div class="car-price">
@@ -489,7 +489,7 @@
                         </div>
                         <div class="car-features">
                             <span><i class="fas fa-cog"></i> Automático</span>
-                            <span><i class="fas fa-car"></i> 5 portas</span>
+                            <span><i class="fas fa-car"></i> 4 portas</span>
                             <span><i class="fas fa-palette"></i> Branco</span>
                         </div>
                         <div class="car-price">
@@ -518,7 +518,7 @@
                         </div>
                         <div class="car-features">
                             <span><i class="fas fa-cog"></i> Automático</span>
-                            <span><i class="fas fa-car"></i> 5 portas</span>
+                            <span><i class="fas fa-car"></i> 4 portas</span>
                             <span><i class="fas fa-palette"></i> Preto</span>
                         </div>
                         <div class="car-price">
@@ -547,7 +547,7 @@
                         </div>
                         <div class="car-features">
                             <span><i class="fas fa-cog"></i> Automático</span>
-                            <span><i class="fas fa-car"></i> 5 portas</span>
+                            <span><i class="fas fa-car"></i> 4 portas</span>
                             <span><i class="fas fa-palette"></i> Vermelho</span>
                         </div>
                         <div class="car-price">
