--- a/pages/index.html
+++ b/pages/index.html
@@ -234,7 +234,7 @@
                 <div class="service-icon">
                     <i class="fas fa-car"></i>
                 </div>
-                <h3>Compra e Venda</h3>
+                <h3>Venda de Veículos</h3>
                 <p>Compre seu carro novo ou seminovo com as melhores condições do mercado.</p>
             </div>
             <div class="service-card">
@@ -243,13 +243,6 @@
                 </div>
                 <h3>Financiamento</h3>
                 <p>Facilitamos seu financiamento com as melhores taxas e condições especiais.</p>
-            </div>
-            <div class="service-card">
-                <div class="service-icon">
-                    <i class="fas fa-tools"></i>
-                </div>
-                <h3>Manutenção</h3>
-                <p>Serviço de manutenção especializado para todas as marcas e modelos.</p>
             </div>
             <div class="service-card">
                 <div class="service-icon">
@@ -391,12 +384,10 @@
             <div class="footer-links">
                 <h4>Links Rápidos</h4>
                 <ul>
-                    <li><a href="#">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                     <li><a href="veiculos.html">Veículos</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Financiamento</a></li>
-                    <li><a href="#">Sobre Nós</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="contatos.html">Contato</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
@@ -418,7 +409,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 AutoElite. Todos os direitos reservados.</p>
+            <p>&copy; 2025 AutoElite. Todos os direitos reservados.</p>
             <div class="footer-bottom-links">
                 <a href="#">Política de Privacidade</a>
                 <a href="#">Termos de Uso</a>
