--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -326,10 +326,8 @@
                     <ul>
                         <li><a href="index.html">Início</a></li>
                         <li><a href="veiculos.html">Veículos</a></li>
-                        <li><a href="#">Serviços</a></li>
-                        <li><a href="#">Financiamento</a></li>
-                        <li><a href="#">Sobre Nós</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="servicos.html">Serviços</a></li>
+                        <li><a href="contatos.html">Contato</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
@@ -351,7 +349,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 AutoElite. Todos os direitos reservados.</p>
+                <p>&copy; 2025 AutoElite. Todos os direitos reservados.</p>
                 <div class="footer-bottom-links">
                     <a href="#">Política de Privacidade</a>
                     <a href="#">Termos de Uso</a>
