--- a/pages/index.html
+++ b/pages/index.html
@@ -20,7 +20,8 @@
                 <li><a href="veiculos.html">Veículos</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contatos.html">Contato</a></li>
-                <li><a href="CRUDusuario.html">CRUD</a></li>
+                <li><a href="CRUDusuario.html">CRUDusuario</a></li>
+                <li><a href="CRUDveiculos.html">CRUDveiculos</a></li>
             </ul>
         </nav>
         <div class="login-button" id="user-info">
