--- a/pages/CRUDveiculos.html
+++ b/pages/CRUDveiculos.html
@@ -23,7 +23,7 @@
           <li><a href="veiculos.html">Veículos</a></li>
           <li><a href="servicos.html">Serviços</a></li>
           <li><a href="contatos.html">Contato</a></li>
-          <li><a href="CRUDusuario.html">CRUD</a></li>
+          <li><a href="CRUDusuario.html">CRUDusuario</a></li>
           <li><a href="CRUDveiculos.html">CRUDveiculos</a></li>
         </ul>
       </nav>
