--- a/pages/contatos.html
+++ b/pages/contatos.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contatos - AutoElite</title>
     <link rel="stylesheet" href="contatos.css">
+    <link rel="stylesheet" href="styles.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -22,6 +24,8 @@
                     <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="contatos.html">Contato</a></li>
+                    <li><a href="CRUDusuario.html">CRUDusuario</a></li>
+                    <li><a href="CRUDveiculos.html">CRUDveiculos</a></li>
                 </ul>
             </nav>
             <div class="login-button">
