--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -22,6 +22,8 @@
                     <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="contatos.html">Contato</a></li>
+                    <li><a href="CRUDusuario.html">CRUDusuario</a></li>
+                    <li><a href="CRUDveiculos.html">CRUDveiculos</a></li>
                 </ul>
             </nav>
             <div class="login-button">
