--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -33,9 +33,6 @@
                 </a>
                 <div id="user-info" class="user-info"></div>
             </div>
-            
-                </a>
-            </div>
         </div>
     </header>
 
@@ -97,7 +94,7 @@
                 <div class="form-row">
                     <div class="form-group">
                         <label for="nome">Nome completo</label>
-                        <input type="text" id="nome" name="name" required>
+                        <input type="text" id="nome" name="nome" required>
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
@@ -108,7 +105,7 @@
                 <div class="form-row">
                     <div class="form-group">
                         <label for="telefone">Telefone</label>
-                        <input type="tel" id="telefone" name="phone">
+                        <input type="tel" id="telefone" name="telefone">
                     </div>
                     <div class="form-group">
                         <label for="cpf">CPF</label>
