--- a/pages/index.html
+++ b/pages/index.html
@@ -17,11 +17,11 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="veiculos.html">Veículos</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="contatos.html">Contato</a></li>
-                <li><a href="CRUDusuario.html">CRUDusuario</a></li>
-                <li><a href="CRUDveiculos.html">CRUDveiculos</a></li>
+                    <li><a href="veiculos.html">Veículos</a></li>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="contatos.html">Contato</a></li>
+                    <li id="CrudUsuario"><a href="CRUDusuario.html">CRUDusuario</a></li>
+                    <li id="CrudVeiculos"><a href="CRUDveiculos.html">CRUDveiculos</a></li>
             </ul>
         </nav>
         <div class="login-button" id="user-info">
