--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -28,8 +28,8 @@
                     <li><a href="veiculos.html">Veículos</a></li>
                     <li><a href="servicos.html">Serviços</a></li>
                     <li><a href="contatos.html">Contato</a></li>
-                    <li><a href="CRUDusuario.html">CRUDusuario</a></li>
-                    <li><a href="CRUDveiculos.html">CRUDveiculos</a></li>
+                    <li id="CrudUsuario"><a href="CRUDusuario.html">CRUDusuario</a></li>
+                    <li id="CrudVeiculos"><a href="CRUDveiculos.html">CRUDveiculos</a></li>
                 </ul>
             </nav>
             <div class="login-button" id="user-info">
