--- a/pages/veiculos.html
+++ b/pages/veiculos.html
@@ -31,7 +31,6 @@
                 <a href="/pages/autenticacao.html" class="btn-login" id="login-link">
                     <i class="fas fa-user"></i> Login
                     <div id="user-info" class="user-info"></div>
-    
                 </a>
             </div>
     </header>
@@ -627,7 +626,7 @@
         </div>
     </footer>
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-    <script src="/pages/routes/sessao.js" defer></script>
+    <script src="/routes/sessao.js" defer></script>
 </body>
 
 </html>
