--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -99,6 +99,11 @@
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" required>
                     </div>
+                    <div class="form-group">
+                        <label for="senha">Senha:</label>
+                        <input type="password" id="senha" name="senha" required>
+                      </div>
+                      
                 </div>
 
                 <div class="form-row">
