--- a/pages/CRUDusuario.html
+++ b/pages/CRUDusuario.html
@@ -103,6 +103,10 @@
 
                 <div class="form-row">
                     <div class="form-group">
+                        <label for="senha">Senha:</label>
+                        <input type="password" id="senha" name="senha" required>
+                      </div>
+                    <div class="form-group">
                         <label for="telefone">Telefone</label>
                         <input type="tel" id="telefone" name="telefone">
                     </div>
@@ -117,7 +121,7 @@
                         <label for="user-role">Função</label>
                         <select id="user-role" name="role">
                             <option value="">Selecione uma função</option>
-                            <option value="Administrador">Administrador</option>
+                            <option value="admin">Administrador</option>
                             <option value="Cliente">Cliente</option>
                         </select>
                     </div>
